--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CondoBoard</title>
+
   <link rel="stylesheet" href="styles.css">
-  <script src="https://cdn.syncfusion.com/ej2/20.4.48/dist/ej2.min.js"></script>
   <link rel="stylesheet" href="https://cdn.syncfusion.com/ej2/20.4.48/material.css">
+  
+  <title>CondoBoard</title>
 </head>
 
 <body>
   <header>
-    <h1>Condo Scheduler Dashboard</h1>
+    <h1>Condo Board</h1>
   </header>
   <main>
     <div id="scheduler-section">
-      <h2>Scheduler</h2>
+      <h2>Calendar</h2>
       <div id="Scheduler"></div>
     </div>
     <div id="datagrid-section">
@@ -24,8 +25,9 @@
       <div id="Grid"></div>
     </div>
   </main>
-
+  
   <script src="script.js"></script>
+  <script src="https://cdn.syncfusion.com/ej2/20.4.48/dist/ej2.min.js"></script>
 </body>
 
 </html>
